# jaxace

./: .gitignore  .pre-commit-config.yaml  Artifacts.toml  README.md  codecov.yml  generate_doc_plots.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  publish.yml  tests.yml
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api/: index.html
0.1.0/contributing/: index.html
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/api/: index.html
0.1.1/contributing/: index.html
0.1.1/examples/: index.html
0.1.1/search/: search_index.json
0.2.0/: 404.html  index.html  sitemap.xml
0.2.0/api/: index.html
0.2.0/examples/: index.html
0.3.1/: 404.html  index.html  sitemap.xml
0.4.0/: 404.html  index.html  sitemap.xml
0.4.1/: 404.html  index.html  sitemap.xml
0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
2025.09.11/: 404.html  index.html  sitemap.xml
2025.09.12/: 404.html  index.html  sitemap.xml
2025.09.13/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  objects.inv  sitemap.xml
docs/: api.md  contributing.md  examples.md  index.md
examples/: plot_cosmology.py
jaxace/: __init__.py  background.py  chebyshev.py  core.py  initialization.py  utils.py
tests/: testNN.json  test_akima_interpolation.py  test_artifact_loading.py  test_background.py  test_chebyshev.py  test_core_functionality.py  test_cubic_spline.py  test_curvature.py  test_edge_cases.py  test_gauss_legendre.py  test_generic_emulator.py  test_integration_benchmark.py  test_nn_comparison.py  test_simple.py  test_structure.py
(+29 files in other folders)
